--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
         <!-- <nav class="nav_links"> -->
         <a href="#about">
             <div class="mobile-logo">
-                <img src="home-logo.svg" alt="">
+                <img src="home-logo copy.svg" alt="">
             </div>
             <div class="about_me">About Me</div>
         </a>
 
         <a href="#skill_id">
             <div class="mobile-logo">
-                <img src="comp-logo.svg" alt="">
+                <img src="comp-logo copy.svg" alt="">
             </div>
             <div class="skills">Skills</div>
         </a>
 
         <a href="#proj_id">
             <div class="mobile-logo">
-                <img src="subttasks-svgrepo-com.svg" alt="">
+                <img src="subttasks-svgrepo-com copy.svg" alt="">
             </div>
             <div class="projects">Projects</div>
         </a>
 
         <a href="#contact_id">
             <div class="mobile-logo">
-                <img src="phone-light.svg" alt="">
+                <img src="phone-logo copy.svg" alt="">
             </div>
             <div class="contact_me">Contact me</div>
         </a>
