--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="mobile-logo">
                 <img src="home-logo copy.svg" alt="">
             </div>
-            <div class="about_me">About Me</div>
+            <div class="about_me">About</div>
         </a>
 
         <a href="#skill_id">
@@ -45,7 +45,7 @@
             <div class="mobile-logo">
                 <img src="phone-logo copy.svg" alt="">
             </div>
-            <div class="contact_me">Contact me</div>
+            <div class="contact_me">Connect</div>
         </a>
 
         <!-- </nav> -->
