Adding projects and tad bit customization

--- a/index.html
+++ b/index.html
@@ -79,16 +79,14 @@
             <section id="about">
                 <div class="abt_me_sec">
                     <h2>About Me</h2>
-                    <p>
-                        Aspiring software engineer 🚀 skilled in C++, Python, HTML, CSS & Dart 💻
-                        I have a solid foundation in data structures and algorithms 🧠, and I enjoy building clean,
-                        scalable ⚙️,
-                        and efficient 🚀 solutions to real-world problems.
-                        <br><br>
-                        Alongside development 💻, I explore creative areas like video editing 🎬, motion graphics ✨, and
-                        3D modeling 🧊,
-                        which help me bring a fresh perspective 🌈 to tech projects.
-                    </p>
+
+                    I am an aspiring software engineer with strong proficiency in C++, Python, JS ,React and CSS. I
+                    have a solid foundation in data structures and algorithms, and I enjoy building clean, scalable, and
+                    efficient solutions to real-world problems. In addition to development, I explore creative domains
+                    such as video editing, motion graphics, and 3D modeling, which enhance my ability to approach
+                    technical projects with a fresh and innovative perspective.
+
+
                 </div>
             </section>
             <section id="skill_id">
@@ -223,14 +221,64 @@
             <section id="proj_id">
                 <div class="proj_sec">
                     <h2>Projects</h2>
+                    <h3>VocalizeIt - TTS website | React, Node.js</h3>
+                    A minimalist React and Node.js TTS app using ElevenLabs API for natural voice synthesis. Clean
+                    design, fast performance, and easy-to-use interface.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">React.js</div>
+                        <div class="tech-stack-used">Node.js</div>
+                        <div class="tech-stack-used">CSS</div>
+                        <div class="tech-stack-used">ElevenLabs API</div>
+                        <div class="tech-stack-used">Vercel</div>
+                        <div class="tech-stack-used">Render</div>
+                        <div class="tech-stack-used">HTML</div>
+                    </div>
+                    <h3>Remndr - ToDo App | React</h3>
+                    A stylish React To-Do List app with task and subtask management, deadline support, and localStorage
+                    for data persistence. It features easy task deletion, multiple font options, and a custom
+                    background. Clean, responsive, and user-friendly for everyday productivity.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">React.js</div>
+                        <div class="tech-stack-used">localStorage</div>
+                        <div class="tech-stack-used">CSS</div>
+                        <div class="tech-stack-used">HTML</div>
+                    </div>
+                    <h3>Portfolio Website | HTML, CSS, JS</h3>
+                    A personal portfolio website showcasing my skills, projects, and contact information.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">HTML</div>
+                        <div class="tech-stack-used">CSS</div>
+                        <div class="tech-stack-used">JavaScript</div>
+                    </div>
                     <h3>Jarvis-like Chatbot | Python, TTS</h3>
-                    Built a voice-interactive AI assistant using speech recognition and text-to-speech
+                    Built a voice-interactive AI assistant using speech recognition and text-to-speech.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">Python</div>
+                        <div class="tech-stack-used">GoogleTTS</div>
+                    </div>
 
                     <h3>Hand Sign Detection | C++, OpenCV</h3>
-                    Real-time gesture recognition system using computer vision techniques
+                    Real-time gesture recognition system using computer vision techniques.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">OpenCV</div>
+                        <div class="tech-stack-used">C++</div>
+                    </div>
 
                     <h3>Freelance Video Editor | Remote</h3>
-                    Delivered 200+ videos for clients; 1.7L+ views; used Blender for 3D-integrated tech promos
+                    Delivered 200+ videos for clients; 1.7L+ views; used Blender for 3D-integrated tech promos.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">After Effects</div>
+                        <div class="tech-stack-used">Blender</div>
+                        <div class="tech-stack-used">Photoshop</div>
+                        <div class="tech-stack-used">Figma</div>
+                        <div class="tech-stack-used">Premiere Pro</div>
+                    </div>
                 </div>
             </section>
             <section id="contact_id">
