Adding projects and tad bit customization

--- a/index.html
+++ b/index.html
@@ -80,24 +80,14 @@
                 <div class="abt_me_sec">
                     <h2>About Me</h2>
 
-                    I am an aspiring software engineer with strong proficiency in C++, Python, JS ,React and CSS. I
-                    have a solid foundation in data structures and algorithms, and I enjoy building clean, scalable, and
-                    efficient solutions to real-world problems. In addition to development, I explore creative domains
-                    such as video editing, motion graphics, and 3D modeling, which enhance my ability to approach
-                    technical projects with a fresh and innovative perspective.
-
+                    Aspiring software engineer skilled in C++, Python, JS, React, and CSS. 
+                    Also into video editing, motion graphics, and 3D modeling.
 
                 </div>
             </section>
             <section id="skill_id">
                 <div class="skills_sec">
                     <h2>Skills</h2>
-                    <!-- <p>
-                    I have a diverse skill set that includes web and app development, programming, and design.
-                    My expertise spans HTML, CSS, Flutter, Dart, C++, Python, JavaScript, After Effects, Figma,
-                    Photoshop, and Blender. I enjoy combining technical skills with creative design to build engaging
-                    and user-friendly applications.
-                </p> -->
                     <h3>Development | Web and App </h3>
                     <br>
                     <div class="mobile_info_skills">
