updating tools used

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <div class="tech-stack-used">React.js</div>
                         <div class="tech-stack-used">Node.js</div>
                         <div class="tech-stack-used">CSS</div>
-                        <div class="tech-stack-used">MMicrosoft Azure</div>
+                        <div class="tech-stack-used">Microsoft Azure</div>
                         <div class="tech-stack-used">Vercel</div>
                         <div class="tech-stack-used">Render</div>
                         <div class="tech-stack-used">HTML</div>
