updating tech stack

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="abt_me_sec">
                     <h2>About Me</h2>
 
-                    Aspiring software engineer skilled in C++, Python, JS, React, and CSS. 
+                    Aspiring software engineer skilled in C++, Python, JS, React, and CSS.
                     Also into video editing, motion graphics, and 3D modeling.
 
                 </div>
@@ -88,126 +88,127 @@
             <section id="skill_id">
                 <div class="skills_sec">
                     <h2>Skills</h2>
-                    <h3>Development | Web and App </h3>
+
+                    <!-- Development Skills -->
+                    <h3>Development | Web and App</h3>
                     <br>
                     <div class="mobile_info_skills">
-                        HTML | CSS | Flutter | Dart
+                        React.js | Node.js | Express.js | MongoDB | Firebase | Flutter | Dart | CSS | HTML
                     </div>
                     <div class="cards">
-                        <div class="card1">
-                            <div class="html_logo"><br>
-                                <div class="html_name">
-                                    HTML
-                                </div>
+                        <div class="card9">
+                            <div class="react_logo"><br>
+                                <div class="react_name">React.js</div>
                             </div>
                         </div>
-                        <div class="card2">
-                            <div class="css_logo">
-                                <br>
-                                <div class="css_name">
-                                    CSS
-                                </div>
+                        <div class="card10">
+                            <div class="node_logo"><br>
+                                <div class="node_name">Node.js</div>
+                            </div>
+                        </div>
+                        <div class="card11">
+                            <div class="express_logo"><br>
+                                <div class="express_name">Express.js</div>
+                            </div>
+                        </div>
+                        <div class="card12">
+                            <div class="mongo_logo"><br>
+                                <div class="mongo_name">MongoDB</div>
+                            </div>
+                        </div>
+                        <div class="card16">
+                            <div class="firebase_logo"><br>
+                                <div class="firebase_name">Firebase</div>
                             </div>
                         </div>
                         <div class="card3">
-                            <div class="flutter_logo">
-                                <br>
-                                <div class="flutter_name">
-                                    Flutter
-                                </div>
+                            <div class="flutter_logo"><br>
+                                <div class="flutter_name">Flutter</div>
                             </div>
                         </div>
                         <div class="card4">
-                            <div class="dart_logo">
-                                <br>
-                                <div class="dart_name">
-                                    Dart
-                                </div>
+                            <div class="dart_logo"><br>
+                                <div class="dart_name">Dart</div>
                             </div>
                         </div>
+                        <div class="card2">
+                            <div class="css_logo"><br>
+                                <div class="css_name">CSS</div>
+                            </div>
+                        </div>
+                        <div class="card1">
+                            <div class="html_logo"><br>
+                                <div class="html_name">HTML</div>
+                            </div>
+                        </div>
+
+
+
                     </div>
+
                     <br>
+                    <!-- Programming Languages -->
                     <h3>Programming</h3>
                     <br>
                     <div class="mobile_info_skills">
                         C++ | C | Python | JS
                     </div>
                     <div class="cards2">
-
                         <div class="card5">
-                            <div class="cpp_logo">
-                                <br>
-                                <div class="cpp_name">
-                                    C++
-                                </div>
+                            <div class="cpp_logo"><br>
+                                <div class="cpp_name">C++</div>
                             </div>
                         </div>
                         <div class="card6">
-                            <div class="c_logo">
-                                <br>
-                                <div class="c_name">
-                                    C
-                                </div>
+                            <div class="c_logo"><br>
+                                <div class="c_name">C</div>
                             </div>
                         </div>
                         <div class="card7">
-                            <div class="python_logo">
-                                <br>
-                                <div class="python_name">
-                                    Python
-                                </div>
+                            <div class="python_logo"><br>
+                                <div class="python_name">Python</div>
                             </div>
                         </div>
                         <div class="card8">
-                            <div class="js_logo">
-                                <br>
-                                <div class="js_name">
-                                    JS
-                                </div>
+                            <div class="js_logo"><br>
+                                <div class="js_name">JS</div>
                             </div>
                         </div>
                     </div>
+
                     <br>
-                    <h3>Design | VFX & 3D </h3>
+                    <!-- Design Tools -->
+                    <h3>Design | VFX & 3D</h3>
                     <br>
                     <div class="mobile_info_skills">
                         After Effects | Figma | Photoshop | Blender
                     </div>
                     <div class="cards3">
-                        <div class="card9">
+                        <div class="card13">
                             <div class="ae_logo"><br>
-                                <div class="ae_name">
-                                    After Effects
-                                </div>
+                                <div class="ae_name">After Effects</div>
                             </div>
                         </div>
-                        <div class="card10">
-                            <div class="pr_logo">
-                                <br>
-                                <div class="pr_name">
-                                    Figma
-                                </div>
+                        <div class="card16">
+                            <div class="pr_logo"><br>
+                                <div class="pr_name">Figma</div>
                             </div>
                         </div>
-                        <div class="card11">
-                            <div class="ps_logo">
-                                <br>
-                                <div class="ps_name">
-                                    Photoshop
-                                </div>
+                        <div class="card16">
+                            <div class="ps_logo"><br>
+                                <div class="ps_name">Photoshop</div>
                             </div>
                         </div>
-                        <div class="card12">
-                            <div class="blender_logo">
-                                <br>
-                                <div class="blender_name">
-                                    Blender
-                                </div>
+                        <div class="card16">
+                            <div class="blender_logo"><br>
+                                <div class="blender_name">Blender</div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+
+
             <section id="proj_id">
                 <div class="proj_sec">
                     <h2>Projects</h2>
