--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <h3>Development | Web and App</h3>
                     <br>
                     <div class="mobile_info_skills">
-                        React.js | Node.js | Express.js | MongoDB | Firebase | Flutter | Dart | CSS | HTML
+                        React.js | Node.js | Express.js | MongoDB <br>| Firebase | Flutter | Dart | CSS | HTML
                     </div>
                     <div class="cards">
                         <div class="card9">
