--- a/index.html
+++ b/index.html
@@ -206,11 +206,10 @@
                         </div>
                     </div>
                 <h3>LeetCode Progress</h3>
-                <br>
                 <div class="leetcode_stats" style="
-                margin-top: 10px;
-                padding: 15px;
                 border-radius: 12px;
+                padding-bottom: 15px;
+                padding-left: 5px;
                 /* background-color: rgba(240,240,240,0.2); */
                 max-width: 100%;
                 overflow-x: auto;
