--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                             </div>
                         </div>
                     </div>
-                <h3>LeetCode Progress</h3>
-                <div class="leetcode_stats" style="
+                    <!-- <h3>LeetCode Progress</h3>
+                    <div class="leetcode_stats" style="
                 border-radius: 12px;
                 padding-bottom: 15px;
                 padding-left: 5px;
@@ -214,98 +214,116 @@
                 max-width: 100%;
                 overflow-x: auto;
                 ">
-                    Loading LeetCode calendar...
+                        Loading LeetCode calendar...
+                    </div> -->
                 </div>
+            </section>
+
+
+            <section id="proj_id">
+                <div class="proj_sec">
+                    <h2>Projects</h2>
+                    <h3><a href="https://recrailer.vercel.app/" target="_blank">🔗</a> Recrailer - Email Campaign Manager | MERN, JWT, Node-Cron</h3>
+                    A full-stack email campaign manager with secure Gmail integration, JWT authentication, and automated
+                    email scheduling using Cron jobs. Minimalist design with easy-to-use dashboard and campaign
+                    management.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">React.js</div>
+                        <div class="tech-stack-used">Node.js</div>
+                        <div class="tech-stack-used">Express.js</div>
+                        <div class="tech-stack-used">MongoDB</div>
+                        <div class="tech-stack-used">CSS</div>
+                        <div class="tech-stack-used">JWT</div>
+                        <div class="tech-stack-used">Node-Cron</div>
+                        <div class="tech-stack-used">Nodemailer</div>
+                        <div class="tech-stack-used">Vercel</div>
+                        <div class="tech-stack-used">Render</div>
+                    </div>
+
+                    <h3><a href="https://github.com/Shourya523/VocalizeIt" target="_blank">🔗</a> VocalizeIt - TTS website | React, Node.js</h3>
+                    A minimalist React and Node.js TTS app using ElevenLabs API for natural voice synthesis. Clean
+                    design, fast performance, and easy-to-use interface.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">React.js</div>
+                        <div class="tech-stack-used">Node.js</div>
+                        <div class="tech-stack-used">CSS</div>
+                        <div class="tech-stack-used">Microsoft Azure</div>
+                        <div class="tech-stack-used">Vercel</div>
+                        <div class="tech-stack-used">Render</div>
+                        <div class="tech-stack-used">HTML</div>
+                    </div>
+                    <h3><a href="https://shourya523.github.io/Remndr/" target="_blank">🔗</a> Remndr - ToDo App | React</h3>
+                    A stylish React To-Do List app with task and subtask management, deadline support, and localStorage
+                    for data persistence. It features easy task deletion, multiple font options, and a custom
+                    background. Clean, responsive, and user-friendly for everyday productivity.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">React.js</div>
+                        <div class="tech-stack-used">localStorage</div>
+                        <div class="tech-stack-used">CSS</div>
+                        <div class="tech-stack-used">HTML</div>
+                    </div>
+                    <h3>Portfolio Website | HTML, CSS, JS</h3>
+                    A personal portfolio website showcasing my skills, projects, and contact information.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">HTML</div>
+                        <div class="tech-stack-used">CSS</div>
+                        <div class="tech-stack-used">JavaScript</div>
+                    </div>
+                    <h3>Jarvis-like Chatbot | Python, TTS</h3>
+                    Built a voice-interactive AI assistant using speech recognition and text-to-speech.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">Python</div>
+                        <div class="tech-stack-used">GoogleTTS</div>
+                    </div>
+
+                    <h3>Hand Sign Detection | C++, OpenCV</h3>
+                    Real-time gesture recognition system using computer vision techniques.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">OpenCV</div>
+                        <div class="tech-stack-used">C++</div>
+                    </div>
+
+                    <h3>Freelance Video Editor | Remote</h3>
+                    Delivered 200+ videos for clients; 1.7L+ views; used Blender for 3D-integrated tech promos.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">After Effects</div>
+                        <div class="tech-stack-used">Blender</div>
+                        <div class="tech-stack-used">Photoshop</div>
+                        <div class="tech-stack-used">Figma</div>
+                        <div class="tech-stack-used">Premiere Pro</div>
+                    </div>
+                </div>
+            </section>
+            <section id="contact_id">
+                <div class="con_sec">
+                    <h2>Contact Me</h2>
+                    I'm always open to discussing new projects, collaborations, or opportunities to be part of something
+                    creative. Whether you have a question, a freelance request, or just want to say hello — feel free to
+                    reach out!
+
+                    <h3>Email:</h3> <a href="mailto:shourya124sensei@gmail.com">shourya124sensei@gmail.com</a>
+                    <h3>LinkedIn:</h3><a href="https://www.linkedin.com/in/shourya-singh-297297358/"
+                        target="_blank">linkedin.com/in/shourya-singh-297297358/</a>
+                    <h3>GitHub:</h3> <a href="https://github.com/Shourya523" target="_blank">github.com/Shourya523</a>
+                    <br>
+                    <div class="space_removable2"><br></div>
+                    <h3 style="text-align: center;">Let’s <a href="mailto:shourya124sensei@gmail.com">connect</a> and <a
+                            href="https://github.com/Shourya523">build</a> something great together</h3>
+                </div>
+            </section>
+            <br>
+            <p class="trademark" style="text-align: center; font-size: 0.95em; color: #555;">
+                Made with <span style="color: red;">❤️</span> by <strong>Shourya</strong>
+            </p>
+
         </div>
-        </section>
-
-
-        <section id="proj_id">
-            <div class="proj_sec">
-                <h2>Projects</h2>
-                <h3>VocalizeIt - TTS website | React, Node.js</h3>
-                A minimalist React and Node.js TTS app using ElevenLabs API for natural voice synthesis. Clean
-                design, fast performance, and easy-to-use interface.
-                <br>
-                <div class="tech-stack-div">
-                    <div class="tech-stack-used">React.js</div>
-                    <div class="tech-stack-used">Node.js</div>
-                    <div class="tech-stack-used">CSS</div>
-                    <div class="tech-stack-used">Microsoft Azure</div>
-                    <div class="tech-stack-used">Vercel</div>
-                    <div class="tech-stack-used">Render</div>
-                    <div class="tech-stack-used">HTML</div>
-                </div>
-                <h3>Remndr - ToDo App | React</h3>
-                A stylish React To-Do List app with task and subtask management, deadline support, and localStorage
-                for data persistence. It features easy task deletion, multiple font options, and a custom
-                background. Clean, responsive, and user-friendly for everyday productivity.
-                <br>
-                <div class="tech-stack-div">
-                    <div class="tech-stack-used">React.js</div>
-                    <div class="tech-stack-used">localStorage</div>
-                    <div class="tech-stack-used">CSS</div>
-                    <div class="tech-stack-used">HTML</div>
-                </div>
-                <h3>Portfolio Website | HTML, CSS, JS</h3>
-                A personal portfolio website showcasing my skills, projects, and contact information.
-                <br>
-                <div class="tech-stack-div">
-                    <div class="tech-stack-used">HTML</div>
-                    <div class="tech-stack-used">CSS</div>
-                    <div class="tech-stack-used">JavaScript</div>
-                </div>
-                <h3>Jarvis-like Chatbot | Python, TTS</h3>
-                Built a voice-interactive AI assistant using speech recognition and text-to-speech.
-                <br>
-                <div class="tech-stack-div">
-                    <div class="tech-stack-used">Python</div>
-                    <div class="tech-stack-used">GoogleTTS</div>
-                </div>
-
-                <h3>Hand Sign Detection | C++, OpenCV</h3>
-                Real-time gesture recognition system using computer vision techniques.
-                <br>
-                <div class="tech-stack-div">
-                    <div class="tech-stack-used">OpenCV</div>
-                    <div class="tech-stack-used">C++</div>
-                </div>
-
-                <h3>Freelance Video Editor | Remote</h3>
-                Delivered 200+ videos for clients; 1.7L+ views; used Blender for 3D-integrated tech promos.
-                <br>
-                <div class="tech-stack-div">
-                    <div class="tech-stack-used">After Effects</div>
-                    <div class="tech-stack-used">Blender</div>
-                    <div class="tech-stack-used">Photoshop</div>
-                    <div class="tech-stack-used">Figma</div>
-                    <div class="tech-stack-used">Premiere Pro</div>
-                </div>
-            </div>
-        </section>
-        <section id="contact_id">
-            <div class="con_sec">
-                <h2>Contact Me</h2>
-                I'm always open to discussing new projects, collaborations, or opportunities to be part of something
-                creative. Whether you have a question, a freelance request, or just want to say hello — feel free to
-                reach out!
-
-                <h3>Email:</h3> <a href="mailto:shourya124sensei@gmail.com">shourya124sensei@gmail.com</a>
-                <h3>LinkedIn:</h3><a href="https://www.linkedin.com/in/shourya-singh-297297358/"
-                    target="_blank">linkedin.com/in/shourya-singh-297297358/</a>
-                <h3>GitHub:</h3> <a href="https://github.com/Shourya523" target="_blank">github.com/Shourya523</a>
-                <br>
-                <div class="space_removable2"><br></div>
-                <h3 style="text-align: center;">Let’s <a href="mailto:shourya124sensei@gmail.com">connect</a> and <a
-                        href="https://github.com/Shourya523">build</a> something great together</h3>
-            </div>
-        </section>
-        <br>
-        <p class="trademark" style="text-align: center; font-size: 0.95em; color: #555;">
-            Made with <span style="color: red;">❤️</span> by <strong>Shourya</strong>
-        </p>
-
-    </div>
     </div>
     <script src="script.js"></script>
 
