Add TypeScript and Next.js logos, update skills section in portfolio

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <h3>Development | Web and App</h3>
                     <br>
                     <div class="mobile_info_skills">
-                        React.js | Node.js | Express.js | MongoDB <br>| Firebase | Flutter | Dart | CSS | HTML
+                        React.js | Node.js | Express.js | Next.js <br>| MongoDB | Firebase | Flutter | Dart | CSS | HTML
                     </div>
                     <div class="cards">
                         <div class="card9">
@@ -109,6 +109,11 @@
                         <div class="card11">
                             <div class="express_logo"><br>
                                 <div class="express_name">Express.js</div>
+                            </div>
+                        </div>
+                        <div class="card11">
+                            <div class="next_logo"><br>
+                                <div class="nextjs_name">Next.js</div>
                             </div>
                         </div>
                         <div class="card12">
@@ -151,17 +156,23 @@
                     <h3>Programming</h3>
                     <br>
                     <div class="mobile_info_skills">
-                        C++ | C | Python | JS
+                        TS | JS | C++ | Python | C
                     </div>
+
                     <div class="cards2">
+                        <div class="card8">
+                            <div class="js_logo"><br>
+                                <div class="js_name">JS</div>
+                            </div>
+                        </div>
+                        <div class="card8">
+                            <div class="ts_logo"><br>
+                                <div class="ts_name">TS</div>
+                            </div>
+                        </div>
                         <div class="card5">
                             <div class="cpp_logo"><br>
                                 <div class="cpp_name">C++</div>
-                            </div>
-                        </div>
-                        <div class="card6">
-                            <div class="c_logo"><br>
-                                <div class="c_name">C</div>
                             </div>
                         </div>
                         <div class="card7">
@@ -169,9 +180,9 @@
                                 <div class="python_name">Python</div>
                             </div>
                         </div>
-                        <div class="card8">
-                            <div class="js_logo"><br>
-                                <div class="js_name">JS</div>
+                        <div class="card6">
+                            <div class="c_logo"><br>
+                                <div class="c_name">C</div>
                             </div>
                         </div>
                     </div>
@@ -223,8 +234,29 @@
             <section id="proj_id">
                 <div class="proj_sec">
                     <h2>Projects</h2>
-                    <h3><a href="https://recrailer.vercel.app/" target="_blank">🔗</a> Recrailer - Email Campaign Manager | MERN, JWT, Node-Cron</h3>
-                    A full-stack email campaign manager with secure Gmail integration, JWT authentication, and automated
+                    <h3><a href="https://www.linkedin.com/posts/activity-7393296456125693952-DRkm?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAAFkH4dMBDDVleB72xnHpKvjp2VY3h95BvmE"
+                            target="_blank">🔗</a> EduSync – Unified Smart Campus
+                        System | MERN, JWT, WebSockets, AI/ML</h3>
+                    A full-stack campus platform with AI-driven timetable optimization, centralized notes, smart
+                    café ordering, calendar integration, real-time notifications, and AI-powered academic
+                    assistance.
+                    <br>
+                    <div class="tech-stack-div">
+                        <div class="tech-stack-used">React.js</div>
+                        <div class="tech-stack-used">Node.js</div>
+                        <div class="tech-stack-used">Express.js</div>
+                        <div class="tech-stack-used">MongoDB</div>
+                        <div class="tech-stack-used">Firebase</div>
+                        <div class="tech-stack-used">RAG</div>
+                        <div class="tech-stack-used">LangChain</div>
+                        <div class="tech-stack-used">GeminiAPI</div>
+                        <div class="tech-stack-used">Python</div>
+                        <div class="tech-stack-used">Nodemailer</div>
+                    </div>
+                    <h3><a href="https://recrailer.vercel.app/" target="_blank">🔗</a> Recrailer - Email Campaign
+                        Manager | MERN, JWT, Node-Cron</h3>
+                    A full-stack email campaign manager with secure Gmail integration, JWT authentication, and
+                    automated
                     email scheduling using Cron jobs. Minimalist design with easy-to-use dashboard and campaign
                     management.
                     <br>
@@ -241,7 +273,8 @@
                         <div class="tech-stack-used">Render</div>
                     </div>
 
-                    <h3><a href="https://github.com/Shourya523/VocalizeIt" target="_blank">🔗</a> VocalizeIt - TTS website | React, Node.js</h3>
+                    <h3><a href="https://github.com/Shourya523/VocalizeIt" target="_blank">🔗</a> VocalizeIt - TTS
+                        website | React, Node.js</h3>
                     A minimalist React and Node.js TTS app using ElevenLabs API for natural voice synthesis. Clean
                     design, fast performance, and easy-to-use interface.
                     <br>
@@ -254,8 +287,10 @@
                         <div class="tech-stack-used">Render</div>
                         <div class="tech-stack-used">HTML</div>
                     </div>
-                    <h3><a href="https://shourya523.github.io/Remndr/" target="_blank">🔗</a> Remndr - ToDo App | React</h3>
-                    A stylish React To-Do List app with task and subtask management, deadline support, and localStorage
+                    <h3><a href="https://shourya523.github.io/Remndr/" target="_blank">🔗</a> Remndr - ToDo App |
+                        React</h3>
+                    A stylish React To-Do List app with task and subtask management, deadline support, and
+                    localStorage
                     for data persistence. It features easy task deletion, multiple font options, and a custom
                     background. Clean, responsive, and user-friendly for everyday productivity.
                     <br>
